fix sort page alignment

--- a/DSA-Visulizer/style.css
+++ b/DSA-Visulizer/style.css
@@ -407,7 +407,7 @@ body.light-mode #sort-page {
   flex-wrap: wrap;
   justify-content: center;
   gap: 15px;
-  margin-bottom: 30px;
+  margin:0 60px 40px 60px;
 }
 
 .sort-selector a{
@@ -450,9 +450,9 @@ body.light-mode .sort-btn.active {
 }
 
 .sort-desc {
-  max-width: 800px;
-  margin: 0 auto 40px;
-  padding: 20px;
+  /* max-width: 800px; */
+  margin: 60px;
+  padding: 40px;
   background-color: #543939;
   border-radius: 12px;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.05);
@@ -479,9 +479,9 @@ body.light-mode .sort-desc {
   align-items: center;
   background-color: #1c1616;
   gap: 30px;
-  margin: 20px;
+  margin: 60px;
   border-radius: 20px;
-  padding: 20px;
+  padding: 40px;
 }
 
 body.light-mode .visualizer-layout {
@@ -677,7 +677,7 @@ body.light-mode .control-panel button:hover {
 }
 
 .sort-lan-selector {
-  margin-top: 40px;
+  margin: 40px 60px;
   display: flex;
   flex-wrap: wrap;
   gap: 12px;
@@ -703,13 +703,11 @@ body.light-mode .control-panel button:hover {
 }
 
 .code-display {
-  margin-top: 20px;
-  padding: 20px;
+  margin: 60px;
+  padding: 40px;
   background-color: #1c1616;
   border-radius: 12px;
   color: #fff;
-  max-width: 90%;
-  margin-inline: auto;
   white-space: pre-wrap;
   overflow-x: auto;
   display: flex;
@@ -743,9 +741,14 @@ body.light-mode #copy-btn {
 }
 
 @media screen and (max-width: 768px) {
+
+  .sort-selector{
+    margin: 0 20px 40px 20px;
+  }
   .visualizer-layout {
     flex-direction: column;
-    padding: 15px;
+    margin: 20px;
+    padding: 20px;
     gap: 15px;
   }
 
@@ -761,6 +764,9 @@ body.light-mode #copy-btn {
 
   .sort-desc {
     font-size: 0.95rem;
+    padding: 20px;
+    margin: 20px;
+    margin-bottom: 50px
   }
 
   .bar-wrapper{
@@ -777,6 +783,11 @@ body.light-mode #copy-btn {
     width: 12px;
   }
 
+  .code-display{
+    padding: 15px;
+    margin: 20px;
+  }
+
   .code-display p {
     font-size: 0.8rem;
   }
@@ -785,5 +796,9 @@ body.light-mode #copy-btn {
     width: 100%;
     max-height: 300px;
     overflow-y: auto;
+  }
+
+  .sort-lan-selector{
+    margin: 40px 20px;
   }
 }
